# jeff

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  change-filters.yml  dependabot.yml
.github/actions/check-changes/: action.yml
.github/workflows/: ci-markdown.yml  ci-py.yml  ci-rs.yml  ci-schema.yml  ci.yml  drop-cache.yml  pr-title.yml
benchmarks/structured/: README.md
benchmarks/structured/ghz-linear/: README.md  ghz-linear.qasm
benchmarks/structured/ghz-star/: README.md  ghz-star.qasm
benchmarks/structured/grover/: README.md  grover.qasm
benchmarks/structured/iqft/: README.md  iqft.qasm
docs/: faqs.md  motivation.md  spec.md
examples/: .gitattributes  README.md  encode_examples.sh
examples/catalyst_simple/: README.md  catalyst_simple.jeff  catalyst_simple.txt
examples/catalyst_tket_opt/: README.md  catalyst_tket_opt.jeff  catalyst_tket_opt.txt
examples/entangled_calls/: README.md  entangled_calls.jeff  entangled_calls.txt
examples/entangled_qs/: README.md  entangled_qs.jeff  entangled_qs.txt
examples/python_optimization/: README.md  python_optimization.ipynb  python_optimization.jeff  python_optimization.txt
examples/qubits/: README.md  qubits.jeff  qubits.txt
impl/: README.md
impl/capnp/: cpp_namespace.patch  jeff.capnp
impl/py/: CHANGELOG.md  README.md  jeff.py  pyproject.toml
impl/py/src/jeff/: __init__.py  capnp.py  function.py  module.py  region.py  string_table.py  type.py  value.py
impl/py/src/jeff/capnp/: __init__.py
impl/py/src/jeff/data/: jeff.capnp
impl/py/src/jeff/op/: __init__.py  kind.py  scf.py
impl/py/src/jeff/op/qubit/: __init__.py  gate.py  non_unitary.py  protocol.py
impl/py/tests/: test_examples.py  test_reader.py
impl/rs/: Cargo.toml  README.md
impl/rs/benches/: criterion.rs  iai.rs
impl/rs/benches/benchmark/: dummy.rs
impl/rs/benches/helper/: traits.rs
impl/rs/src/: jeff.rs  lib.rs  reader.rs  types.rs
impl/rs/src/capnp/: .gitattributes  jeff_capnp.rs  mod.rs
impl/rs/src/reader/: function.rs  metadata.rs  module.rs  op.rs  optype.rs  region.rs  string_table.rs  value.rs  verify.rs
impl/rs/src/reader/optype/: const_val.rs  control_flow.rs  float.rs  int.rs  qubit.rs
impl/rs/src/reader/optype/qubit/: pauli.rs  well_known.rs
impl/rs/src/reader/value/: function_io.rs  wire_value.rs
impl/rs/src/test/: mod.rs
rfcs/: 0000-template.md  README.md
rfcs/text/: 0000-structured-benchmark-programs.md  0032-structured-benchmark-programs.md
tools/: __init__.py
tools/qiskit_convert/: CMakeLists.txt  __main__.py  converter.py  main.cpp  qiskit_jeff.cpp  qiskit_jeff.h  qiskit_jeff_pyext.cpp
tools/qiskit_convert/.cache/clangd/index/: main.cpp.AF9FA06E3BFB0419.idx  qiskit_jeff.cpp.EAFA5E775EB16198.idx  qiskit_jeff.h.5FD9BDCE4EF9FE68.idx  qiskit_jeff_pyext.cpp.CE3CA73FB4A4017F.idx
tools/qiskit_convert/tests/: conftest.py  test_converter.py  test_qiskit_convert.py
tools/verifier/: Cargo.toml  README.md  __init__.py  __main__.py  verifier.py
tools/verifier/jeff_verifier/: __init__.py  __main__.py  core.py  engine.py
tools/verifier/src/: analysis.rs  errors.rs  lib.rs  main.rs
tools/verifier/src/checks/: attributes.rs  isolation.rs  linearity.rs  mod.rs  ssa.rs  types.rs
tools/verifier/src/passes/: isolation.rs  mod.rs  module_attributes.rs  type_checks.rs  value_checks.rs
tools/verifier/tests/: .gitignore  encode_test_cases.sh  encode_tests.sh  examples.rs  generate_test_cases.py  integration.rs  negative.rs  negative_attrs.rs  negative_bounds.rs  negative_linearity.rs  negative_ordering.rs  negative_scoping.rs  negative_types.rs  positive.rs  test_verifier.py
tools/verifier/tests/fixtures/invalid/: bad_entrypoint.jeff  bad_entrypoint.txt  float_mul_mismatch.jeff  float_mul_mismatch.txt  float_precision.jeff  float_precision.txt  int_bitwidth.jeff  int_bitwidth.txt  int_sub_bitwidth.jeff  int_sub_bitwidth.txt  leaked_qubit.jeff  leaked_qubit.txt  no_entrypoint.jeff  no_entrypoint.txt  non_linear_qubit.jeff  non_linear_qubit.txt  region_escape.jeff  region_escape.txt  type_mismatch.jeff  type_mismatch.txt  use_before_def.jeff  use_before_def.txt
tools/verifier/tests/fixtures/valid/: basic.jeff  basic.txt
tools/verifier/tests/negative/: incompatible_version.jeff  incompatible_version.txt  invalid_entrypoint.jeff  invalid_entrypoint.txt  invalid_input_type.jeff  invalid_input_type.txt  invalid_output_type.jeff  invalid_output_type.txt  isolation_violation.jeff  isolation_violation.txt  linear_consumed_twice.jeff  linear_consumed_twice.txt  linear_never_consumed.jeff  linear_never_consumed.txt  missing_version.jeff  missing_version.txt  type_mismatch.jeff  type_mismatch.txt  used_before_defined.jeff  used_before_defined.txt  value_out_of_bounds.jeff  value_out_of_bounds.txt  value_produced_twice.jeff  value_produced_twice.txt  wrong_arity.jeff  wrong_arity.txt
tools/verifier/tests/negative/encode/bounds/: nested_source_oob.txt  nested_target_oob.txt  op_input_oob.txt  op_output_oob.txt  region_source_oob.txt  region_target_oob.txt
tools/verifier/tests/negative/encode/module/: entrypoint_is_declaration.txt
tools/verifier/tests/negative/encode/types/: alloc_unexpected_input.txt  free_unexpected_output.txt  gate_missing_param_input.txt  gate_too_few_qubit_inputs.txt  gate_wrong_output_count.txt  qureg_alloc_bad_input.txt  qureg_alloc_bad_output.txt  qureg_extract_index_bad_idx_input.txt  qureg_extract_index_bad_qubit_output.txt  qureg_extract_index_bad_reg_input.txt  qureg_free_bad_input.txt  qureg_insert_index_bad_qubit_input.txt  qureg_join_bad_input.txt  qureg_length_bad_output.txt
tools/verifier/tests/positive/: valid_alloc_gate_measure.jeff  valid_alloc_gate_measure.txt  valid_deep_qubit_chain.jeff  valid_deep_qubit_chain.txt  valid_for_qubit_isolation.jeff  valid_for_qubit_isolation.txt  valid_int_float_ops.jeff  valid_int_float_ops.txt  valid_three_qubit_gates.jeff  valid_three_qubit_gates.txt  valid_while_isolation.jeff  valid_while_isolation.txt
(+46 files in other folders)
