[profile.release]
lto = "thin"

[workspace]
resolver = "2"
members = ["impl/rs"]

[workspace.package]
rust-version = "1.85"
edition = "2021"
homepage = "https://github.com/unitaryfoundation/jeff"
repository = "https://github.com/unitaryfoundation/jeff"
license = "Apache-2.0"
#authors = []

[workspace.lints.rust]
missing_docs = "warn"

[workspace.dependencies]
insta = { version = "1.34.0" }
capnp = "0.21.2"
cool_asserts = "2.0.3"
criterion = "0.5.1"
derive_more = "2.0.1"
iai-callgrind = "0.14.2"
itertools = "0.14.0"
rstest = "0.24.0"

[profile.dev.package]
insta.opt-level = 3
