[tool.uv.workspace]
members = ["impl/py"]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }]
lint = ["pre-commit ~=4.3", "ruff ~=0.12.10", "mypy ~=1.17"]
test = [
    "ipykernel ~=6.29",
    "pytest ~=8.4",
    "pytest-cov ~=6.2",
    "pytest-notebook ~=0.10.0",
    "mypy ~=1.17",
]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pycapnp = { git = "https://github.com/capnproto/pycapnp" }
