[tool.uv.workspace]
members = ["impl/py"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "graphix>=0.3.5",
    "graphix-qasm-parser>=0.1.1",
]
lint = ["pre-commit ~=4.3", "ruff ~=0.12.10", "mypy ~=1.17"]
test = [
    "ipykernel ~=6.29",
    "pytest ~=8.4",
    "pytest-cov ~=6.2",
    "pytest-notebook ~=0.10.0",
    "mypy ~=1.17",
]

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
