[project]
name = "jeff-format"
version = "0.1.0"
requires-python = ">=3.10"
description = "Python bindings for the `jeff` exchange format."
license = { file = "LICENCE" }
readme = "README.md"
authors = []
maintainers = []

classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pycapnp~=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jeff"]

[tool.uv.sources]
pycapnp = { git = "https://github.com/mlxd/pycapnp", branch = "mlxd/update_gh_actions" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
