[package]
name = "jeff-verify"
version = "0.1.0"
description = "Verification tool for jeff programs"
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
jeff-format = { path = "../../impl/rs" }
clap = { version = "4", features = ["derive"] }
derive_more = { workspace = true, features = ["display", "error"] }

[dev-dependencies]
rstest = { workspace = true }
